[package]
name = "carrier_routes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib/mod.rs"

[dependencies]

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "directed_edges_bench"
harness = false
